# ChangeLog for dev-perl/Net-Server-Mail
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Server-Mail/ChangeLog,v 1.1 2011/06/07 14:37:00 tove Exp $

*Net-Server-Mail-0.170.0 (07 Jun 2011)

  07 Jun 2011; Torsten Veller <tove@gentoo.org>
  +Net-Server-Mail-0.170.0.ebuild, +metadata.xml:
  Initial commit for net-mail/kuvert (#370425)
