@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Server-Mail/Net-Server-Mail-0.170.0.ebuild,v 1.1 2011/06/07 14:37:00 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Server-Mail/Net-Server-Mail-0.170.0.ebuild,v 1.2 2011/06/08 07:46:07 xarthisius Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ DESCRIPTION="Class to easily create a mail server"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~ppc ~x86"
 IUSE=""
 
 RDEPEND="
