@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Net-Server-Mail
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Server-Mail/ChangeLog,v 1.1 2011/06/07 14:37:00 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Server-Mail/ChangeLog,v 1.2 2011/06/08 07:46:07 xarthisius Exp $
+
+  08 Jun 2011; Kacper Kowalik <xarthisius@gentoo.org>
+  Net-Server-Mail-0.170.0.ebuild:
+  Marked ~ppc wrt #370621
 
 *Net-Server-Mail-0.170.0 (07 Jun 2011)
 
